Delete 100vh for section because of bug on mobile

--- a/05/css/desktop.css
+++ b/05/css/desktop.css
@@ -73,7 +73,6 @@
 /* section--two-columns */
 
 .section--two-columns {
-  height: 100vh;
   grid-template-areas:
     "A B";
   grid-template-columns: repeat(2, 1fr);
@@ -99,7 +98,6 @@
 /* section--three-columns */
 
 .section--three-columns {
-  height: 100vh;
   grid-template-areas:
     "A B C";
   grid-template-columns: repeat(3, 1fr);
